--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -5,5 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "mahjong>=1.4.0",
     "ultralytics>=8.4.8",
 ]
