--- a/api/pyrightconfig.json
+++ b/api/pyrightconfig.json
@@ -1,6 +1,4 @@
 {
-  "venvPath": ".",
-  "venv": ".venv",
-  "pythonVersion": "3.12",
-  "extraPaths": [".venv/lib/python3.12/site-packages"]
+  "venvPath": "..",
+  "venv": ".venv"
 }
