Add oxfmt and oxlint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
   "python.defaultInterpreterPath": "./.venv/bin/python",
-  "python.terminal.activateEnvironment": true
+  "python.terminal.activateEnvironment": true,
+  "oxc.configPath": "./frontend/.oxlintrc.json",
+  "[typescript][typescriptreact][json]": {
+    "editor.defaultFormatter": "oxc.oxc-vscode"
+  }
 }
