--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,29 @@ requires-python = ">=3.12"
 [tool.uv.workspace]
 members = ["api", "model"]
 
+[tool.uv]
+required-environments = [
+  "sys_platform == 'darwin'",
+  "sys_platform == 'win32'",
+  "sys_platform == 'linux' and platform_machine == 'x86_64'",
+]
+
 [[tool.uv.index]]
 name = "pytorch-cu118"
 url = "https://download.pytorch.org/whl/cu118"
 explicit = true
 
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+explicit = true
+
 [tool.uv.sources]
 torch = [
-  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
+  { index = "pytorch-cu118", marker = "sys_platform == 'win32'" },
+  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
 ]
 torchvision = [
-  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
+  { index = "pytorch-cu118", marker = "sys_platform == 'win32'" },
+  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
 ]
